# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

distributeddatamgr_cangjie_wrapper_packages_ohos = [
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/data:ohos.data",
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/data/preferences:ohos.data.preferences",
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/data/data_share_predicates:ohos.data.data_share_predicates",
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/data/relational_store:ohos.data.relational_store",
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/data/values_bucket:ohos.data.values_bucket",
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/data/distributed_kv_store:ohos.data.distributed_kv_store",
  "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/ohos/pasteboard:ohos.pasteboard",
]
distributeddatamgr_cangjie_wrapper_packages_kit = [ "//foundation/distributeddatamgr/distributeddatamgr_cangjie_wrapper/kit/ArkData:kit.ArkData" ]
copy_ohos_cangjie_sdk_api_lib("copy_sdk_distributeddatamgr_cangjie_libs") {
  ohos_inputs = distributeddatamgr_cangjie_wrapper_packages_ohos
  kit_inputs = distributeddatamgr_cangjie_wrapper_packages_kit
}
