# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.data_share_predicates") {
  sources = [
    "data_share_predicates.cj",
    "data_share_predicates_common.cj",
    "data_share_predicates_ffi.cj",
  ]

  external_deps = [ "data_share:cj_data_share_predicates_ffi" ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "hiviewdfx_cangjie_api:ohos.hilog",
  ]

  cj_deps = [
    "../values_bucket:ohos.values_bucket",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "distributeddatamgr_cangjie_api"
  lib_name = "data_share_predicates"
}
