# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.data.distributed_kv_store") {
  sources = [
    "device_kvstore.cj",
    "distributed_kv_store.cj",
    "distributed_kv_store_common.cj",
    "distributed_kv_store_ffi.cj",
    "kvstore_result_set.cj",
    "query.cj",
    "single_kvstore.cj",
  ]

  external_deps = [ "kv_store:cj_distributed_kv_store_ffi" ]

  cj_external_deps = [
    "ability_cangjie_wrapper:ohos.app.ability",
    "ability_cangjie_wrapper:ohos.app.ability.ui_ability",
    "arkui_cangjie_wrapper:ohos.base",
    "cangjie_ark_interop:ohos.callback_invoke",
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "distributeddatamgr_cangjie_wrapper"
}
